# methlevels

./: .gitignore  changelog.md  mypy.ini  mypy_include.txt  pyproject.toml  setup.py
conda_recipe/: meta.yaml
doc/: plots.ipynb  plots.py
doc/data/: plots_beta-values-tidy.tsv  plots_beta-values.tsv  plots_cpg-pos.bed  plots_dmrs.bed
src/methlevels/: __init__.py  bed_calls.py  dmr_intervals.py  io.py  meth_in_regions.py  methstats.py  plot_genomic.py  plot_methlevels.py  plot_methlevels_old.py  plot_region.py  plot_utils.py  plots.py  plots2.py  recipes.py  region_plot.py  scwgbs_tools.py  utils.py
src/methlevels/tools/: interval_methstats.smk
tests/: test_bed_calls.py  test_dmr_intervals.py  test_io.py  test_methstats.py  test_plot_genomic.py  test_plots.py  test_plots2.py  test_region_plot.py
tests/test-data/: gencode_mm10_egf_region.gtf
